# windows-http-server

./: .gitignore  CMakeLists.txt  README.md
include/: request.hpp  response.hpp  server.hpp  socket.hpp  thread_pool.hpp
src/: main.cpp  request.cpp  response.cpp  server.cpp  socket.cpp  thread_pool.cpp
www/: index.html
